--- a/config/sata_emea/default/config_ignore.settings.yml
+++ b/config/sata_emea/default/config_ignore.settings.yml
@@ -5,4 +5,10 @@ ignored_config_entities:
   - 'acquia_connector.settings:spi.site_uuid'
   - 'search_api.server.acquia_search_server:backend_config.connector_config'
   - 'webform.webform.*'
-  - 'sata.settings:*'
+  - 'sata.settings:price_spider_hide'
+  - 'sata.settings:price_spider_generic_key'
+  - 'sata.settings:price_spider_product_key'
+  - 'sata.settings:price_spider_country'
+  - 'sata.settings:price_spider_language'
+  - 'sata.settings:cookiebot_cbid'
+  - 'sata.settings:logo_tagline*'
