--- a/config/sata_us/default/sata.settings.yml
+++ b/config/sata_us/default/sata.settings.yml
@@ -10,14 +10,16 @@ favicon:
   use_default: 0
   path: themes/custom/sata/favicons/favicon.ico
   mimetype: image/vnd.microsoft.icon
-price_spider_generic_key: 2377-63050151745ebe000edcd360
+price_spider_generic_key: 5994e318c4d97a6dbf2d9a4d
 price_spider_hide: 0
 price_spider_country: US
 price_spider_language: en
-price_spider_product_key: 2377-63050130cb2c6c000dda36f9
+price_spider_product_key: 5994e3055319cc6f56bb06f6
 logo_tagline:
-  path: 'public://tagline-us.svg'
+  path: 'public://tagline-eu_1.svg'
   use_default: 0
-  url: /sites/sata_us/files/tagline-us.svg
+  url: /sites/sata_us/files/tagline-eu_1.svg
 enable_w1_grid: 0
 cookiebot_cbid: ''
+price_spider_account_key: '2377'
+price_spider_reviews_key: 63050185745ebe000edcd361
