--- a/composer.json
+++ b/composer.json
@@ -121,7 +121,7 @@
         "drupal/robotstxt": "^1.3",
         "drupal/schema_metatag": "^2.1",
         "drupal/search_api": "^1.28",
-        "drupal/search_api_solr": "^4.2.9",
+        "drupal/search_api_solr": "4.2.8",
         "drupal/selective_better_exposed_filters": "^2.0@beta",
         "drupal/shield": "^1.6",
         "drupal/simple_sitemap": "^3.3",
