--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -6,7 +6,9 @@ webserver_type: apache-fpm
 router_http_port: "80"
 router_https_port: "443"
 xdebug_enabled: false
-additional_hostnames: []
+additional_hostnames: 
+- "de.clecotools"
+- "uk.clecotools"
 additional_fqdns: []
 database:
   type: mariadb
@@ -16,7 +18,10 @@ mutagen_enabled: false
 use_dns_when_possible: true
 composer_version: "2"
 web_environment: []
-nodejs_version: "16"
+nodejs_version: "14"
+hooks:
+  post-start:
+    - exec-host: ddev nvm install 14.17.3 && ddev nvm use 14.17.3
 
 # Key features of ddev's config.yaml:
 
