--- a/config/campbell/default/core.entity_view_display.node.news.default.yml
+++ b/config/campbell/default/core.entity_view_display.node.news.default.yml
@@ -37,11 +37,11 @@ content:
     weight: 2
     region: content
   field_date:
-    type: datetime_default
+    type: datetime_custom
     label: hidden
     settings:
       timezone_override: ''
-      format_type: medium
+      date_format: 'D,d/m/Y'
     third_party_settings: {  }
     weight: 0
     region: content
@@ -55,7 +55,7 @@ content:
     region: content
   field_news_release_document:
     type: entity_reference_entity_view
-    label: hidden
+    label: above
     settings:
       view_mode: default
       link: false
