--- a/docroot/themes/custom/campbell/campbell.libraries.yml
+++ b/docroot/themes/custom/campbell/campbell.libraries.yml
@@ -33,6 +33,7 @@ slider:
       //cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css: { type: external, minified: true }
   js:
     //cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js: { type: external, minified: true }
+    js/slider.js: {}
 
   dependencies:
     - core/jquery
