--- a/config/campbell/default/core.extension.yml
+++ b/config/campbell/default/core.extension.yml
@@ -22,6 +22,7 @@ module:
   block_content: 0
   block_field: 0
   breakpoint: 0
+  campbell_common: 0
   campbell_migrations: 0
   ckeditor: 0
   classy_paragraphs: 0
