--- a/config/campbell/default/config_split.config_split.local.yml
+++ b/config/campbell/default/config_split.config_split.local.yml
@@ -13,11 +13,12 @@ module:
   acquia_connector: 0
   acquia_purge: 0
   dblog: 0
+  devel: 0
   stage_file_proxy: 0
   views_ui: 0
-  devel: 0
 theme: {  }
-blacklist: {  }
+blacklist:
+  - search_api.server.ddev_local_solar_server
 graylist:
   - advagg.settings
   - advagg_css_minify.settings
