--- a/config/campbell/default/config_ignore.settings.yml
+++ b/config/campbell/default/config_ignore.settings.yml
@@ -2,3 +2,4 @@ _core:
   default_config_hash: m3ypoMoedILNeLX0GjGnjRTcVGXAqJnzib1_GNfHLz0
 ignored_config_entities:
   - 'block.block.custom_*'
+  - views.view.taxonomy_menu
