--- a/config/clecotools/default/core.entity_form_display.node.enhanced_product.default.yml
+++ b/config/clecotools/default/core.entity_form_display.node.enhanced_product.default.yml
@@ -3,30 +3,58 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.enhanced_product.body
     - field.field.node.enhanced_product.field_360_image
+    - field.field.node.enhanced_product.field_downloads
     - field.field.node.enhanced_product.field_feature_hotspots
     - field.field.node.enhanced_product.field_features_copy
+    - field.field.node.enhanced_product.field_footnotes
+    - field.field.node.enhanced_product.field_long_description
+    - field.field.node.enhanced_product.field_media
+    - field.field.node.enhanced_product.field_product_classifications
     - field.field.node.enhanced_product.field_product_features
+    - field.field.node.enhanced_product.field_product_images
     - field.field.node.enhanced_product.field_product_line
+    - field.field.node.enhanced_product.field_product_models
     - field.field.node.enhanced_product.field_related_products
     - field.field.node.enhanced_product.field_sku
     - field.field.node.enhanced_product.field_slug
+    - field.field.node.enhanced_product.field_upc
     - field.field.node.enhanced_product.field_video_background
     - field.field.node.enhanced_product.field_video_popup
+    - field.field.node.enhanced_product.field_web_display_sort_order
     - node.type.enhanced_product
   module:
     - content_moderation
+    - inline_entity_form
     - media_library
     - paragraphs
+    - path
     - text
 id: node.enhanced_product.default
 targetEntityType: node
 bundle: enhanced_product
 mode: default
 content:
+  body:
+    type: text_textarea_with_summary
+    weight: 24
+    region: content
+    settings:
+      rows: 9
+      summary_rows: 3
+      placeholder: ''
+      show_summary: false
+    third_party_settings: {  }
+  created:
+    type: datetime_timestamp
+    weight: 3
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_360_image:
     type: entity_reference_paragraphs
-    weight: 8
+    weight: 13
     region: content
     settings:
       title: '360° Product Image'
@@ -36,9 +64,22 @@ content:
       form_display_mode: default
       default_paragraph_type: 360_product_image
     third_party_settings: {  }
+  field_downloads:
+    type: inline_entity_form_simple
+    weight: 21
+    region: content
+    settings:
+      form_mode: default
+      override_labels: false
+      label_singular: ''
+      label_plural: ''
+      collapsible: false
+      collapsed: false
+      revision: false
+    third_party_settings: {  }
   field_feature_hotspots:
     type: entity_reference_paragraphs
-    weight: 10
+    weight: 15
     region: content
     settings:
       title: 'Product Hotspot'
@@ -50,15 +91,48 @@ content:
     third_party_settings: {  }
   field_features_copy:
     type: text_textarea
-    weight: 9
+    weight: 14
     region: content
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
+  field_footnotes:
+    type: text_textarea
+    weight: 22
+    region: content
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+  field_long_description:
+    type: string_textfield
+    weight: 20
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  field_media:
+    type: media_library_widget
+    weight: 23
+    region: content
+    settings:
+      media_types: {  }
+    third_party_settings: {  }
+  field_product_classifications:
+    type: entity_reference_autocomplete
+    weight: 25
+    region: content
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   field_product_features:
     type: entity_reference_paragraphs
-    weight: 11
+    weight: 16
     region: content
     settings:
       title: 'Product Feature'
@@ -68,15 +142,32 @@ content:
       form_display_mode: default
       default_paragraph_type: enhanced_product_features
     third_party_settings: {  }
+  field_product_images:
+    type: media_library_widget
+    weight: 26
+    region: content
+    settings:
+      media_types: {  }
+    third_party_settings: {  }
   field_product_line:
     type: options_select
     weight: 2
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_product_models:
+    type: entity_reference_autocomplete
+    weight: 27
+    region: content
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   field_related_products:
     type: string_textarea
-    weight: 5
+    weight: 8
     region: content
     settings:
       rows: 5
@@ -84,7 +175,7 @@ content:
     third_party_settings: {  }
   field_sku:
     type: string_textfield
-    weight: 3
+    weight: 4
     region: content
     settings:
       size: 60
@@ -92,7 +183,15 @@ content:
     third_party_settings: {  }
   field_slug:
     type: string_textfield
-    weight: 4
+    weight: 6
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  field_upc:
+    type: string_textfield
+    weight: 29
     region: content
     settings:
       size: 60
@@ -100,14 +199,22 @@ content:
     third_party_settings: {  }
   field_video_background:
     type: media_library_widget
-    weight: 6
+    weight: 10
     region: content
     settings:
       media_types: {  }
     third_party_settings: {  }
   field_video_popup:
     type: string_textfield
-    weight: 7
+    weight: 12
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  field_web_display_sort_order:
+    type: string_textfield
+    weight: 30
     region: content
     settings:
       size: 60
@@ -122,13 +229,33 @@ content:
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 13
+    weight: 18
     region: content
     settings: {  }
     third_party_settings: {  }
+  path:
+    type: path
+    weight: 9
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  promote:
+    type: boolean_checkbox
+    weight: 5
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 14
+    weight: 19
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
+  sticky:
+    type: boolean_checkbox
+    weight: 11
     region: content
     settings:
       display_label: true
@@ -141,14 +268,19 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  uid:
+    type: entity_reference_autocomplete
+    weight: 7
+    region: content
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   url_redirects:
-    weight: 12
+    weight: 17
     region: content
     settings: {  }
     third_party_settings: {  }
-hidden:
-  created: true
-  path: true
-  promote: true
-  sticky: true
-  uid: true
+hidden: {  }
