--- a/config/campbell/default/core.extension.yml
+++ b/config/campbell/default/core.extension.yml
@@ -13,6 +13,7 @@ module:
   allowed_formats: 0
   apex_common: 0
   apex_migrations: 0
+  atg_brand_timeline: 0
   automated_cron: 0
   better_exposed_filters: 0
   bg_image_formatter: 0
