--- a/docroot/sites/clecotools/modules/custom/cleco_vuejs/cleco_vuejs.services.yml
+++ b/docroot/sites/clecotools/modules/custom/cleco_vuejs/cleco_vuejs.services.yml
@@ -9,6 +9,7 @@ services:
     class: Drupal\cleco_vuejs\Services\SolrSearchService
     arguments:
       - '@entity_type.manager'
+      - '@language_manager'
 
   step.step_service:
     class: Drupal\cleco_vuejs\Services\StepService
