--- a/config/clecotools/default/core.entity_form_display.taxonomy_term.product_specifications.default.yml
+++ b/config/clecotools/default/core.entity_form_display.taxonomy_term.product_specifications.default.yml
@@ -4,6 +4,8 @@ status: true
 dependencies:
   config:
     - field.field.taxonomy_term.product_specifications.field_long_name
+    - field.field.taxonomy_term.product_specifications.field_specification_attr_key
+    - field.field.taxonomy_term.product_specifications.field_specification_attribute_id
     - taxonomy.vocabulary.product_specifications
   module:
     - path
@@ -27,6 +29,22 @@ content:
     region: content
     settings:
       rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+  field_specification_attr_key:
+    type: string_textfield
+    weight: 103
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  field_specification_attribute_id:
+    type: string_textfield
+    weight: 102
+    region: content
+    settings:
+      size: 60
       placeholder: ''
     third_party_settings: {  }
   langcode:
