--- a/config/clecotools/default/core.entity_view_display.taxonomy_term.product_specifications.default.yml
+++ b/config/clecotools/default/core.entity_view_display.taxonomy_term.product_specifications.default.yml
@@ -4,6 +4,8 @@ status: true
 dependencies:
   config:
     - field.field.taxonomy_term.product_specifications.field_long_name
+    - field.field.taxonomy_term.product_specifications.field_specification_attr_key
+    - field.field.taxonomy_term.product_specifications.field_specification_attribute_id
     - taxonomy.vocabulary.product_specifications
   module:
     - text
@@ -25,6 +27,22 @@ content:
     settings: {  }
     third_party_settings: {  }
     weight: 1
+    region: content
+  field_specification_attr_key:
+    type: string
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    weight: 3
+    region: content
+  field_specification_attribute_id:
+    type: string
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    weight: 2
     region: content
 hidden:
   langcode: true
