--- a/config/clecotools/default/core.entity_form_display.node.enhanced_product.default.yml
+++ b/config/clecotools/default/core.entity_form_display.node.enhanced_product.default.yml
@@ -43,7 +43,7 @@ content:
     third_party_settings: {  }
   field_360_image:
     type: entity_reference_paragraphs
-    weight: 14
+    weight: 13
     region: content
     settings:
       title: '360° Product Image'
@@ -55,7 +55,7 @@ content:
     third_party_settings: {  }
   field_downloads:
     type: entity_reference_autocomplete
-    weight: 21
+    weight: 20
     region: content
     settings:
       match_operator: CONTAINS
@@ -65,7 +65,7 @@ content:
     third_party_settings: {  }
   field_feature_hotspots:
     type: entity_reference_paragraphs
-    weight: 16
+    weight: 15
     region: content
     settings:
       title: 'Product Hotspot'
@@ -77,7 +77,7 @@ content:
     third_party_settings: {  }
   field_features_copy:
     type: text_textarea
-    weight: 15
+    weight: 14
     region: content
     settings:
       rows: 5
@@ -85,7 +85,7 @@ content:
     third_party_settings: {  }
   field_footnotes:
     type: text_textarea
-    weight: 23
+    weight: 22
     region: content
     settings:
       rows: 5
@@ -111,7 +111,7 @@ content:
     third_party_settings: {  }
   field_product_features:
     type: entity_reference_paragraphs
-    weight: 17
+    weight: 16
     region: content
     settings:
       title: 'Product Feature'
@@ -123,20 +123,12 @@ content:
     third_party_settings: {  }
   field_product_models:
     type: entity_reference_autocomplete
-    weight: 22
+    weight: 21
     region: content
     settings:
       match_operator: CONTAINS
       match_limit: 10
       size: 60
-      placeholder: ''
-    third_party_settings: {  }
-  field_related_products:
-    type: string_textarea
-    weight: 9
-    region: content
-    settings:
-      rows: 5
       placeholder: ''
     third_party_settings: {  }
   field_sku:
@@ -157,7 +149,7 @@ content:
     third_party_settings: {  }
   field_upc:
     type: string_textfield
-    weight: 24
+    weight: 23
     region: content
     settings:
       size: 60
@@ -165,14 +157,14 @@ content:
     third_party_settings: {  }
   field_video_background:
     type: media_library_widget
-    weight: 11
+    weight: 10
     region: content
     settings:
       media_types: {  }
     third_party_settings: {  }
   field_video_popup:
     type: string_textfield
-    weight: 13
+    weight: 12
     region: content
     settings:
       size: 60
@@ -180,7 +172,7 @@ content:
     third_party_settings: {  }
   field_web_display_sort_order:
     type: string_textfield
-    weight: 25
+    weight: 24
     region: content
     settings:
       size: 60
@@ -195,13 +187,13 @@ content:
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 19
+    weight: 18
     region: content
     settings: {  }
     third_party_settings: {  }
   path:
     type: path
-    weight: 10
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -214,14 +206,14 @@ content:
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 20
+    weight: 19
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 12
+    weight: 11
     region: content
     settings:
       display_label: true
@@ -245,7 +237,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 18
+    weight: 17
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -254,3 +246,4 @@ hidden:
   field_media: true
   field_product_images: true
   field_product_line: true
+  field_related_products: true
