--- a/config/clecotools/default/core.entity_form_display.node.product.default.yml
+++ b/config/clecotools/default/core.entity_form_display.node.product.default.yml
@@ -31,7 +31,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 121
+    weight: 10
     region: content
     settings:
       rows: 9
@@ -41,13 +41,13 @@ content:
     third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
   field_downloads:
     type: inline_entity_form_simple
-    weight: 132
+    weight: 19
     region: content
     settings:
       form_mode: default
@@ -60,7 +60,7 @@ content:
     third_party_settings: {  }
   field_footnotes:
     type: text_textarea
-    weight: 126
+    weight: 15
     region: content
     settings:
       rows: 5
@@ -68,7 +68,7 @@ content:
     third_party_settings: {  }
   field_long_description:
     type: string_textfield
-    weight: 122
+    weight: 11
     region: content
     settings:
       size: 60
@@ -76,14 +76,14 @@ content:
     third_party_settings: {  }
   field_media:
     type: media_library_widget
-    weight: 127
+    weight: 16
     region: content
     settings:
       media_types: {  }
     third_party_settings: {  }
   field_product_classifications:
     type: entity_reference_autocomplete
-    weight: 130
+    weight: 18
     region: content
     settings:
       match_operator: CONTAINS
@@ -93,7 +93,7 @@ content:
     third_party_settings: {  }
   field_product_features_cp:
     type: string_textfield
-    weight: 125
+    weight: 14
     region: content
     settings:
       size: 60
@@ -101,24 +101,14 @@ content:
     third_party_settings: {  }
   field_product_images:
     type: media_library_widget
-    weight: 128
+    weight: 17
     region: content
     settings:
       media_types: {  }
     third_party_settings: {  }
   field_product_models:
     type: entity_reference_autocomplete
-    weight: 133
-    region: content
-    settings:
-      match_operator: CONTAINS
-      match_limit: 10
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-  field_related_products_ref:
-    type: entity_reference_autocomplete
-    weight: 129
+    weight: 20
     region: content
     settings:
       match_operator: CONTAINS
@@ -128,7 +118,7 @@ content:
     third_party_settings: {  }
   field_sku_group:
     type: string_textfield
-    weight: 124
+    weight: 13
     region: content
     settings:
       size: 60
@@ -136,7 +126,7 @@ content:
     third_party_settings: {  }
   field_slug:
     type: string_textfield
-    weight: 134
+    weight: 21
     region: content
     settings:
       size: 60
@@ -144,7 +134,7 @@ content:
     third_party_settings: {  }
   field_upc:
     type: string_textfield
-    weight: 123
+    weight: 12
     region: content
     settings:
       size: 60
@@ -152,7 +142,7 @@ content:
     third_party_settings: {  }
   field_web_display_sort_order:
     type: string_textfield
-    weight: 135
+    weight: 22
     region: content
     settings:
       size: 60
@@ -160,47 +150,47 @@ content:
     third_party_settings: {  }
   langcode:
     type: language_select
-    weight: 2
+    weight: 1
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 100
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 15
+    weight: 4
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 120
+    weight: 9
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 16
+    weight: 5
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
@@ -213,7 +203,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 2
     region: content
     settings:
       match_operator: CONTAINS
@@ -222,8 +212,9 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 50
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  field_related_products_ref: true
