--- a/config/apextoolgroup/default/core.entity_view_display.node.slider.default.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.node.slider.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.slider.body
     - field.field.node.slider.field_banner_image
+    - field.field.node.slider.field_footer_note
     - field.field.node.slider.field_slider_link
     - node.type.slider
   module:
@@ -31,6 +32,13 @@ content:
       link: true
     third_party_settings: {  }
     weight: 1
+    region: content
+  field_footer_note:
+    type: text_default
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+    weight: 4
     region: content
   field_slider_link:
     type: link
