--- a/config/apextoolgroup/default/core.entity_view_display.node.slider.teaser.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.node.slider.teaser.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.slider.body
     - field.field.node.slider.field_banner_image
+    - field.field.node.slider.field_footer_note
     - field.field.node.slider.field_slider_link
     - node.type.slider
   module:
@@ -23,6 +24,7 @@ content:
 hidden:
   body: true
   field_banner_image: true
+  field_footer_note: true
   field_slider_link: true
   langcode: true
   search_api_excerpt: true
