--- a/config/apextoolgroup/default/block.block.heroimageforcareers.yml
+++ b/config/apextoolgroup/default/block.block.heroimageforcareers.yml
@@ -1,23 +1,23 @@
-uuid: da4771ae-2207-4edb-8cb0-e274ddfc861b
+uuid: 43a299e9-d3d8-427b-bea5-b54d38df1bb0
 langcode: en
 status: true
 dependencies:
   config:
-    - fixed_block_content.fixed_block_content.news_page_top_section
+    - fixed_block_content.fixed_block_content.hero_image_for_careers
   module:
     - fixed_block_content
     - system
   theme:
     - apextoolgroup
-id: newspagetopsection
+id: heroimageforcareers
 theme: apextoolgroup
 region: pre_content
-weight: -7
+weight: -10
 provider: null
-plugin: 'fixed_block_content:news_page_top_section'
+plugin: 'fixed_block_content:hero_image_for_careers'
 settings:
-  id: 'fixed_block_content:news_page_top_section'
-  label: 'News page top section'
+  id: 'fixed_block_content:hero_image_for_careers'
+  label: 'Hero Image for careers'
   label_display: '0'
   provider: fixed_block_content
   view_mode: ''
@@ -25,4 +25,4 @@ visibility:
   request_path:
     id: request_path
     negate: false
-    pages: "/newsroom/*\r\n/newsroom"
+    pages: /careers
